if ENABLE_XMESA_FX                                                              
DEFS += -DXMESA -DFX
endif                                                                           
                                                                                
noinst_LIBRARIES = libGUI.a

libGUI_a_SOURCES = gui.cxx gui.h

INCLUDES += -I$(top_builddir) -I$(top_builddir)/Lib -I$(top_builddir)/Simulator
